test/positive/feature_publicconstructors.java

public class feature_publicconstructors {
  public feature_publicconstructors() {}
}

