test/negative/feature_multiplefieldsperdeclaration.java

public class feature_multiplefieldsperdeclaration {
    public feature_multiplefieldsperdeclaration() {}
    public feature_multiplefieldsperdeclaration a, b;
}
